--- a/build.gradle
+++ b/build.gradle
@@ -2,7 +2,7 @@ plugins {
   id 'org.springframework.boot' version '2.2.6.RELEASE'
   id 'io.spring.dependency-management' version '1.0.9.RELEASE'	
   id 'java'
-  id "com.diffplug.gradle.spotless" version "3.29.0"
+  id 'com.diffplug.gradle.spotless' version '3.29.0'
 }
 
 Closure cl = { task -> println "I'm $task.project.name" }
@@ -27,7 +27,10 @@ configurations {
 }
 
 subprojects {
+  apply plugin: 'org.springframework.boot'
+  apply plugin: 'io.spring.dependency-management'
   apply plugin: 'java'
+  apply plugin: 'com.diffplug.gradle.spotless'
   group = 'com.example'
   version = '1.0'
   repositories {
