--- a/build.gradle
+++ b/build.gradle
@@ -1,9 +1,14 @@
 plugins {
-    id 'org.springframework.boot' version '2.2.6.RELEASE'
-    id 'io.spring.dependency-management' version '1.0.9.RELEASE'
+    id 'org.springframework.boot' version '2.2.6.RELEASE' apply false
+    id 'io.spring.dependency-management' version '1.0.9.RELEASE' apply false
     id 'java'
     id 'com.diffplug.gradle.spotless' version '3.29.0'
     id 'com.github.jakemarsden.git-hooks' version '0.0.1'
+    id 'org.sonarqube' version '2.8'
+}
+
+repositories {
+    mavenCentral()
 }
 
 ext {
@@ -24,6 +29,12 @@ configurations {
 
 gitHooks {
     hooks = ['pre-push': 'check']
+}
+
+sonarqube {
+    properties {
+        property "sonar.sourceEncoding", "UTF-8"
+    }
 }
 
 subprojects {
