--- a/build.gradle
+++ b/build.gradle
@@ -5,7 +5,10 @@ plugins {
     id 'com.diffplug.gradle.spotless' version '3.29.0'
     id 'com.github.jakemarsden.git-hooks' version '0.0.1'
     id 'org.sonarqube' version '2.8'
+    id 'jacoco'
 }
+
+version = '0.0.1-SNAPSHOT'
 
 repositories {
     mavenCentral()
@@ -31,17 +34,12 @@ gitHooks {
     hooks = ['pre-push': 'check']
 }
 
-sonarqube {
-    properties {
-        property "sonar.sourceEncoding", "UTF-8"
-    }
-}
-
 subprojects {
     apply plugin: 'org.springframework.boot'
     apply plugin: 'io.spring.dependency-management'
     apply plugin: 'java'
     apply plugin: 'com.diffplug.gradle.spotless'
+    apply plugin: 'jacoco'
     group = 'com.example'
     sourceCompatibility = '11'
     repositories {
