--- a/build.gradle
+++ b/build.gradle
@@ -6,6 +6,7 @@ plugins {
     id 'com.github.jakemarsden.git-hooks' version '0.0.1'
     id 'org.sonarqube' version '2.8'
     id 'jacoco'
+    id 'com.google.cloud.tools.jib' version '1.7.0' apply false
 }
 
 version = '0.0.1-SNAPSHOT'
@@ -40,6 +41,8 @@ subprojects {
     apply plugin: 'java'
     apply plugin: 'com.diffplug.gradle.spotless'
     apply plugin: 'jacoco'
+    apply plugin: 'com.google.cloud.tools.jib'
+
     group = 'com.example'
     sourceCompatibility = '11'
     repositories {
